--- a/ekyc/templates/index.html
+++ b/ekyc/templates/index.html
@@ -13,7 +13,7 @@
         					</div>
         					<div class="col col-md-8 col-xs-12 px-5" id="contBox">
         							<div class="col-xs-12" id="mainHeading">
-        									<h3><span id="why">Get</span> your KYC instantly verified now </h3>
+        									<h3><span id="why">Get</span> <strong>your KYC instantly verified now Hurrah!!!!</strong></h3>
         							</div>
         							<div class="col-xs-12" id="para">
         									<p><span id="pts">T</span>he main objective of KYC regulations is to restrict money laundering in the financial market. With the increase in suspicious activities and unlawful behaviour, the Reserve Bank of India has made it mandatory for all financial institutions to follow the Know Your Customer procedure for all customers.</p>
