--- a/ekyc/templates/base.html
+++ b/ekyc/templates/base.html
@@ -23,6 +23,8 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="{% static 'international-telephone-input-master/international-telephone-input.css' %}">
+
 
     <!-- font-awesome -->
     <link
@@ -50,30 +52,10 @@
   <body>
     <!--Navbar-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand btn btn-primary" role="button" id="link1" href="/">KYCPortal</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav  ml-auto">
-        {% if user.is_authenticated %}
-        {% comment %} <a  href="/"><h5 class="pt-2">Hello, {{ user.first_name }}</h5></a> {% endcomment %}
-        <div id="box">
-          <a class="nav-item nav-link  "  role="button" id="link" href="logout">Logout</a>
-        </div>
-        
-      <div id="box">
-      <a class="nav-item nav-link  "  id="link"  href="{% url 'verifyprofile' %}" role="button" >My Profile</a>
-        </div>
-      
-      {% else %}
-<div id="box">
-<a class="nav-item nav-link " role="button" id="link" href="{% url 'login' %}">Login</a>
-        </div>
-      
-      {% endif %}
-        </div>
-      </div>
+          <a class="navbar-brand btn btn-primary" role="button" id="link1" href="/">KYCPortal</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
     </nav>
     <img src="{% static 'images/check.png' %}" alt="check" id="bgimg" >
 
@@ -101,5 +83,7 @@
 
 
     <script src="{% static 'js/index.js' %}"></script>
+    <script src="{% static 'js/international-telephone-input.js' %}"></script>
+
   </body>
 </html>
